# Rouxinol

./: .gitignore  CMakeLists.txt  README.md  install.sh  install_deps.sh  rouxinol.yml  rouxinol_cpu.yml  rouxinol_gpu.yml  setup.py
artifact/: README.md  data_classifier.sh  data_generator.sh  games.sh  plot_elapsed.py  plot_figures.sh  plot_metric.py  run_all_cc2025.sh
docker/: Dockerfile
envs/: conda.yml
examples/: .map  classification.py  classification_histogram_preprocessed.py  classification_histogram_sets_preprocessed.py  classification_preprocessed.py  classification_programl.py  config.yl  cses_exploration.py  cses_representation_extractor.py  devmap_exploration.py  exploration_ggnn.py  game.py  game0_cfggrind_dynamic.yl  game0_cfggrind_dynamic.yl.out  game0_cfggrind_static.yl  game0_cfggrind_static.yl.out  game0_llvm.yl  game0_llvm.yl.out  game0_sample.yl  game1.yl  game1_cfggrind_dynamic.yl  game1_cfggrind_dynamic.yl.acc  game1_cfggrind_dynamic.yl.out  game1_cfggrind_static.yl  game1_cfggrind_static.yl.acc  game1_cfggrind_static.yl.out  game1_llvm.yl  game1_llvm.yl.out  game2.py  gameacc.py  openjudge_classification.py  openjudge_exploration.py  openjudge_representation_extractor.py  run.sh  source_to_histograms.py
packing/: conda.yml
passes/: LLVM10.yml  LLVM11.yml  LLVM12.yml  O1_LLVM10.yml  O1_LLVM11.yml  O1_LLVM12.yml  O2_LLVM10.yml  O2_LLVM11.yml  O2_LLVM12.yml  O3_LLVM10.yml  O3_LLVM11.yml  O3_LLVM12.yml  Os_LLVM10.yaml  Os_LLVM11.yml  (+7 more)
tools/milepost_plugin/: CMakeLists.txt  Extractor.cpp  Extractor.hpp  Extractor.s  LICENSE  Pass.cpp  README.md
(+67769 files in other folders)
